app: make sure the scrollbar does not appear for no reason.

--- a/static/scss/reminders.scss
+++ b/static/scss/reminders.scss
@@ -59,7 +59,7 @@ $reminder-width: 300px;
   .edit-content {
     width: 100%;
     resize: none;
-    overflow-y: auto;
+    overflow: hidden; // we auto-resize the textarea using js
   }
 
   .edit {
